--- a/project.json
+++ b/project.json
@@ -6,9 +6,7 @@
   "id": "gameCanvas",
   "renderMode": 0,
   "engineDir": "frameworks/cocos2d-html5",
-  "modules": [
-    "cocos2d"
-  ],
+  "modules": [ "cocos2d", "extensions" ],
   "jsList": [
     "src/Resource.js",
     "src/Hit.js", 
